--- a/README
+++ b/README
@@ -13,4 +13,4 @@ To run the game:
 * control the green snake either by cursor keys or by 5-6-7-8
 * collect apples, don't bite yourself or the black screen border
 
-My personal record as of 2015 is 133 apples
+My personal record (as of Dec 9th, 2015) is 179 apples
